Get under the latest version of studio

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.gigaStorm.twinRinks"
-  android:versionCode="7"
-  android:versionName="1.4.2">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.gigaStorm.twinRinks"
+    android:versionCode="7"
+    android:versionName="1.4.3">
 
   <uses-sdk
-    android:minSdkVersion="11"
-    android:targetSdkVersion="23" />
+      android:minSdkVersion="23"
+      android:targetSdkVersion="24"/>
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,10 +16,9 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
   <application
-    android:allowBackup="true"
-    android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/Theme.Sherlock">
+      android:allowBackup="true"
+      android:icon="@drawable/ic_launcher"
+      android:label="@string/app_name">
     <activity android:name="com.gigaStorm.twinRinks.Activity_Main">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
